replace react-visibility-sensor with react-intersection-observer, fix card not fade in when first in view port

--- a/frontend/src/shared/components/baseCard/baseCard.css
+++ b/frontend/src/shared/components/baseCard/baseCard.css
@@ -10,6 +10,11 @@
     border-radius: 15px;
     background-color: var(--theme-card-header-background);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    transition: all 0.5s ease;
+}
+
+.view-port-hidden {
+    opacity: 0;
 }
 
 .card-header-decal {
